<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">uAudio Waveform</string>
    <string name="title_activity_audio">Audio Manager</string>
    <string name="action_settings">Settings</string>
    <string name="start_record">Start Recording</string>
    <string name="stop_record">Stop Recording</string>
    <string name="start_play">Start</string>
    <string name="stop_play">Stop</string>
    <string name="title_activity_splash_screen"></string>
	<string name="record_part">Record Audio</string>
    <string name="browse_part">Browse Audio</string>
    <string name="to_visualizer_activity">Show Waveform</string>
</resources>
